--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,13 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    App\Security\AccessHandler:
+        arguments:
+            $userProvider: '@security.user.provider.concrete.users_in_database'
+            $passwordUpgrader: '@security.user.provider.concrete.users_in_database'
+
+    Symfony\Component\Security\Core\User\UserProviderInterface: '@security.user.provider.concrete.users_in_database'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
